--- a/data/system.cfg
+++ b/data/system.cfg
@@ -1,10 +1,10 @@
 sys_PakPriority=0
 
 # All supported laguages
-#sys_languages=english, russian
+sys_languages=english, chineset
 
 # Modification language
-#g_language=russian
+g_language=chineset
 
 # Modification audio language
-#g_languageAudio=english
+g_languageAudio=english
